--- a/build.xml
+++ b/build.xml
@@ -6,16 +6,16 @@
     </java>
   </target>
 
-  <target name="clean" description="Comile classes">
+  <target name="clean" description="Clean up built files">
     <delete dir="./build" />
     <delete dir="./reports" />
   </target>
 
-  <target name="build" description="Comile classes">
+  <target name="build" description="Compile classes">
     <mkdir dir="./build" />
     <mkdir dir="./build/classes" />
 
-    <javac destdir="./build/classes" debug="true" source="1.6" target="1.6">
+    <javac destdir="./build/classes" debug="true" source="1.7" target="1.7">
       <src path="./src"/>
       <classpath>
         <fileset dir="./lib" includes="*.jar" />
